--- a/SmartDoorApp/src/app/components/frame/frame.component.scss
+++ b/SmartDoorApp/src/app/components/frame/frame.component.scss
@@ -4,7 +4,8 @@
   padding: 1% 3% 3% 3% ;
   min-height: 100vh;
   min-width: 100vh;  
-  background-size: cover;        
+  background-size: cover;      
+  font-family: 'ploni-light-aaa';  
   }
 
 .content{    
