--- a/SmartDoorApp/src/app/components/log-in/log-in.component.html
+++ b/SmartDoorApp/src/app/components/log-in/log-in.component.html
@@ -1,7 +1,24 @@
 <!-- <p>log-in works!</p> -->
 <button (click)="go()">כניסה</button>
-<div class="bg-img row">
-    <div class="content col-4">
 
+<div class="bg-img ">
+    <div class="container row  d-flex justify-content-center">
+        <div class="logo-div d-flex justify-content-end">
+            <div class="logo">SmartDoor</div>
+        </div>    
+        <div class="content col-4 d-flex justify-content-center">
+            <div class="inner-content d-flex align-items-center flex-column">
+                <div class="mb-auto p-2">
+                    <nav class="title  ">כניסה למערכת</nav>
+                </div>
+                    <form [formGroup]="logInForm">
+                        <input type="text" class="text p-2" placeholder="שם משתמש" formControlName="userName" >
+                        <input type="password" class="password p-2" placeholder="סיסמא" formControlName="password">
+                    </form>                                       
+                    <div class="btn-div ">
+                        <button class="btn d-flex justify-content-center  align-items-center" (click)="go()">כניסה</button>
+                    </div>
+            </div>
+        </div>                                                              
     </div>
 </div>
