--- a/SmartDoorApp/src/app/components/log-in/log-in.component.scss
+++ b/SmartDoorApp/src/app/components/log-in/log-in.component.scss
@@ -1,15 +1,94 @@
+
+
 .bg-img {
     background: url('../../../assets/images/login2.jpg');
-    padding: 1% 3% 3% 3% ;
+    padding: 3% 3% 3% 3% ;
     min-height: 100vh;
     min-width: 100vh;  
-    background-size: cover;        
+    background-size: cover;   
+         
     }
+    // .container{
+       
+        
+    // }
 
     .content{    
-        background-color: white;
-        height: 80vh;
-        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-        border-radius: 6px;   
-        margin: 0 2% 2% 2%; 
+        background-color: rgba(0, 0, 0, 0);
+        height: 85vh;
+        // box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        // border-radius: 6px;   
+        margin: 2% 2% 2% 2%; 
+        border-style: solid;
+        border-color: white;
+        border-width: 1.5px;
+        padding: 2%;
+        padding-bottom: 10%;
+    }
+
+    .title{
+
+        font-size: 52px;
+        color: white;
+        font-family: 'ploni-demibold-aaa';   
+        letter-spacing: 1.2px;             
+    }
+
+    .btn{
+        border-width: 2px;
+        color: white;
+        // background-color: white;
+        border-color: white;
+        border-radius: 50px;
+        margin-bottom: 70%;
+        margin-top: 50%;
+        width: 180px;
+        height: 60px;
+        font-size: 40px;
+        font-family: 'ploni-light-aaa';
+        letter-spacing: 1.2px;
+    }
+
+    .password{
+        background-color: rgba($color: #000000, $alpha: 0);
+        border-color: rgba($color: #000000, $alpha: 0);
+        border-bottom-color: white;
+        margin: 7%;
+        width: 80%;
+        color: white;
+        font-size: 36px;
+        text-align: right;
+        border-width: 1px;
+        font-family: 'ploni-light-aaa';
+    }
+    .text{
+        width: 80%;
+        margin: 7%;
+        background-color: rgba($color: #000000, $alpha: 0);
+        border-color: rgba($color: #000000, $alpha: 0);
+        border-bottom-color: white;
+        color: white;
+        font-size: 36px;
+        text-align: right;
+        border-width: 1px;
+        font-family: 'ploni-light-aaa';
+    }
+
+    ::placeholder {
+        color: white;
+        font-family: 'ploni-light-aaa';
+    }
+    textarea:focus, input:focus{
+        outline: none;
+    }
+
+    .btn-div :hover{
+        background-color: rgba($color: #6722FF, $alpha: 0.3) ;
+
+    }
+
+    .logo{
+        font-size: 36px;
+        font-family: 'ploni-light-aaa';
+        color: white;
     }
