--- a/SmartDoorApp/src/app/components/attendance-page/attendance-page.component.html
+++ b/SmartDoorApp/src/app/components/attendance-page/attendance-page.component.html
@@ -1,1 +1,8 @@
 <p>attendance-page works!</p>
+<h1>שלום, {{greetingMsg}}</h1>
+
+<div class="loader">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
