--- a/SmartDoorApp/src/app/components/employee-list/employee-list.component.html
+++ b/SmartDoorApp/src/app/components/employee-list/employee-list.component.html
@@ -1,1 +1,71 @@
-<p>employee-list works!</p>
+<div class="container">
+  <div class="header">
+    <div class="title d-flex justify-content-center">
+      <p class="title-txt">רשימת עובדים</p>
+    </div>
+    <button class="btn">עובד חדש</button>
+
+  </div>
+  <div class="list container">
+    <div class="filter d-flex justify-content-around">
+      <div class="department-filter input-group mb-3">
+        <input type="text" class="form-control filter-input" aria-label="Default" placeholder="...חיפוש"
+          aria-describedby="inputGroup-sizing-default">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="inputGroup-sizing-default">מחלקה</span>
+        </div>
+      </div>
+
+      <div class="id-filter input-group mb-3">
+        <input type="text" class="form-control filter-input" aria-label="Default" placeholder="...חיפוש"
+          aria-describedby="inputGroup-sizing-default">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="inputGroup-sizing-default">ת.ז.</span>
+        </div>
+      </div>
+
+      <div class="name-filter input-group mb-3">
+        <input type="text" class="form-control filter-input " aria-label="Default" placeholder="...חיפוש"
+          aria-describedby="inputGroup-sizing-default">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="inputGroup-sizing-default">שם</span>
+        </div>
+      </div>
+    </div>
+    <div>
+
+    </div>
+    <div class="employee-list ">
+      <div class="list-group">
+        <div class="list-group-item header-col">
+          <div>שם מלא</div>
+          <div>תז</div>
+          <div>מחלקה</div>
+          <div>ערוך</div>
+          <div>מחק</div>
+        </div>
+      </div>
+      <!-- <div class="list-item  list-group">
+
+
+
+        <div class="col-1">
+מחק
+        </div>
+        <div class="col-1">
+          ערוך
+        </div>
+        <div class="col-3">
+          מחלקה
+        </div>
+        <div class="col-2">
+          תז
+        </div>
+        <div class="col-5">
+          שם מלא
+        </div>
+      </div> -->
+    </div>
+  </div>
+
+</div>
