--- a/SmartDoorApp/src/app/components/log-in/log-in.component.html
+++ b/SmartDoorApp/src/app/components/log-in/log-in.component.html
@@ -1,24 +1,43 @@
 <!-- <p>log-in works!</p> -->
-<button (click)="go()">כניסה</button>
+<!-- <button (click)="go()">כניסה</button> -->
+
+    <!-- <div class="header row d-flex justify-content-end align-items-end">
+        <div class="profil col">פרופיל</div>
+        <div class="menu col-6 d-flex justify-content-center">                
+            <div class="menu-btn2">ניהול עובדים</div>
+            <div class="menu-btn1">דוחות</div>
+        </div>
+        <div class="logo col-2">
+            SmartDoor    
+        </div>            
+    </div>      -->
+
+
 
 <div class="bg-img ">
-    <div class="container row  d-flex justify-content-center">
-        <div class="logo-div d-flex justify-content-end">
+    <!-- <div class="container row  d-flex justify-content-center"> -->
+        <div class="logo-div d-flex justify-content-start">
             <div class="logo">SmartDoor</div>
         </div>    
-        <div class="content col-4 d-flex justify-content-center">
-            <div class="inner-content d-flex align-items-center flex-column">
-                <div class="mb-auto p-2">
-                    <nav class="title  ">כניסה למערכת</nav>
-                </div>
-                    <form [formGroup]="logInForm">
-                        <input type="text" class="text p-2" placeholder="שם משתמש" formControlName="userName" >
-                        <input type="password" class="password p-2" placeholder="סיסמא" formControlName="password">
-                    </form>                                       
-                    <div class="btn-div ">
-                        <button class="btn d-flex justify-content-center  align-items-center" (click)="go()">כניסה</button>
-                    </div>
+        <div class="login-content" [formGroup]="logInForm">
+            <div class="title">כניסה למערכת</div>
+            <div *ngIf="logInNoContent" class="error-msg">משתמש אינו קיים במערכת, שם משתמש או סיסמא שגויים.</div>
+            <div class=" input-content">                
+                <label class="lable">שם משתמש</label>                
+                <input class="input" formControlName="userName">
+                <div class="warning" [ngClass]="{'show':logInForm.controls.userName.errors,'hide':!logInForm.controls.userName.errors}">שם משתמש אינו תקין.</div>
             </div>
-        </div>                                                              
-    </div>
+            <div class="password input-content">
+                <label class="lable">סיסמא</label>                
+                <input class="input" formControlName="password">
+                <div class="warning" [ngClass]="{'show':logInForm.controls.password.errors,'hide':!logInForm.controls.password.errors}">סיסמא חייבת להכיל לפחות 6 תוים.</div>
+            </div>
+            <button class="login-btn" [disabled]="logInForm.controls.password.errors || logInForm.controls.userName.errors || logInForm.controls.password.value=='' || logInForm.controls.userName.value=='' || logInBtnClicked" (click)="LogIn()">
+               
+                <!-- <img *ngIf="logInBtnClicked" src="../../../assets/gifs/loader1.gif" class="loader"> -->
+                <div *ngIf="logInBtnClicked" class="spinner-border text-light" role="status"></div>
+                <span class="login-btn-txt" >כניסה</span>
+            </button>
+
+        </div>        
 </div>
