--- a/SmartDoorApp/src/app/components/attendance-page/attendance-page.component.html
+++ b/SmartDoorApp/src/app/components/attendance-page/attendance-page.component.html
@@ -1,6 +1,6 @@
 <div class="card">  
     <div class="card-header">  
-        <h2 style="margin-left: 620px;">:דו"ח נוכחות של</h2>  
+        <h2 style="margin-left: 620px;">דו"ח נוכחות עבור עובד מס' :{{userFullName}}</h2>  
     </div> 
     <div class="btn-row">
         <button (click)="nextMonth()" title="חודש הבא" class="btn btn-outline-light" style="color: blueviolet; background-color: white;" mat-icon-button>
