--- a/SmartDoorApp/src/app/components/attendance-page/attendance-page.component.scss
+++ b/SmartDoorApp/src/app/components/attendance-page/attendance-page.component.scss
@@ -27,3 +27,12 @@
       background : pink;
     }
   }
+
+  ::ng-deep{
+    .card-body {
+      flex: 1 1 auto;
+      padding: 1rem 1rem;
+      overflow-y: auto;
+      max-height: 400px;
+  }
+  }
