--- a/SmartDoorApp/src/app/components/frame/frame.component.html
+++ b/SmartDoorApp/src/app/components/frame/frame.component.html
@@ -3,7 +3,7 @@
         <div class="header row d-flex justify-content-between align-items-center">
             <div class="profil col"><user-profil></user-profil></div>
             <div class="menu col-6 d-flex justify-content-center">                
-                <div class="menu-btn2" (click)="Nevigate('employee-list')">ניהול עובדים</div>
+                <div *ngIf="IsManager()" class="menu-btn2" (click)="Nevigate('employee-list')">ניהול עובדים</div>
                 <div class="menu-btn1" (click)="Nevigate('attandance')">דוחות</div>
             </div>
             <div class="logo col">
